# pamogk

./: .bumpversion.cfg  .gitattributes  .gitignore  Pipfile  README.md  README.txt  config.py  kirc_to_vec.py  label_mapper.py  pamogk.py  pyproject.toml  requirements.txt  rnaseq_processer.py  rnaseq_processor.py  setup.py  smspk.py  smspk_experiment.py  stmk.py
Visualise/: kernel_visualizer.py  label_analysis.py  patient_pathway_stats.py  report_creator.py  smspk_analysis.py
clinical_data_reader/: clinical_config.py  clinical_data_reader.py  clinical_ov.py
data/: 01c81f4a-6192-11e5-8ac5-06603eb7f303.cx  03079d1e-6195-11e5-8ac5-06603eb7f303.cx  052075b8-6196-11e5-8ac5-06603eb7f303.cx  054f432f-6195-11e5-8ac5-06603eb7f303.cx  073b9f25-6194-11e5-8ac5-06603eb7f303.cx  076bc549-6196-11e5-8ac5-06603eb7f303.cx  095aa3ef-6193-11e5-8ac5-06603eb7f303.cx  0c2862fa-6196-11e5-8ac5-06603eb7f303.cx  134e5bdb-6192-11e5-8ac5-06603eb7f303.cx  149a63dc-6192-11e5-8ac5-06603eb7f303.cx  153b6970-6193-11e5-8ac5-06603eb7f303.cx  1590a3b3-6195-11e5-8ac5-06603eb7f303.cx  1f188fcc-6196-11e5-8ac5-06603eb7f303.cx  20fe3c0e-6192-11e5-8ac5-06603eb7f303.cx  21738158-6194-11e5-8ac5-06603eb7f303.cx  27d5800d-6196-11e5-8ac5-06603eb7f303.cx  2ddeac89-6194-11e5-8ac5-06603eb7f303.cx  316be05e-6196-11e5-8ac5-06603eb7f303.cx  351aacd6-6195-11e5-8ac5-06603eb7f303.cx  3aa9aafa-6194-11e5-8ac5-06603eb7f303.cx  400ebdab-6194-11e5-8ac5-06603eb7f303.cx  41a75463-6193-11e5-8ac5-06603eb7f303.cx  4623bf6d-6194-11e5-8ac5-06603eb7f303.cx  4980bb81-6196-11e5-8ac5-06603eb7f303.cx  4b994cde-6194-11e5-8ac5-06603eb7f303.cx  (+86 more)
(+663 files in other folders)
